<resources>
    <string name="app_name">PDFs</string>
    <string name="tab_home">Home</string>
    <string name="tab_favorite">Favorite</string>
    <string name="tab_recent">Recent</string>
    <string name="tab_settings">Settings</string>
    
    <string name="search_hint">Search PDFs…</string>
    <string name="empty_home">No PDF files found.\nClick Rescan in Settings or allow Storage permission.</string>
    <string name="empty_favorites">No favorites yet.\nClick Three-dots -> Add to Favorite.</string>
    <string name="empty_recent">No recently viewed PDFs.</string>
    
    <string name="permission_dialog_title">Storage Permission Required</string>
    <string name="permission_dialog_msg">This app needs access to your storage to scan and display all PDF files on your device. Please grant permission to continue.</string>
    <string name="btn_allow">Allow</string>
    <string name="btn_exit">Exit</string>
    
    <string name="settings_version_title">App Version</string>
    <string name="settings_version_val">1.0.0</string>
    <string name="settings_theme_title">Light/Dark Theme</string>
    <string name="settings_rescan_title">Rescan Storage</string>
    <string name="settings_rescan_desc">Search device storage again for new PDFs</string>
    
    <string name="menu_rename">Rename</string>
    <string name="menu_favorite">Add to Favorite</string>
    <string name="menu_unfavorite">Remove Favorite</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>
</resources>
